--- a/app/src/main/res/layout/content_main2.xml
+++ b/app/src/main/res/layout/content_main2.xml
@@ -8,4 +8,9 @@
     tools:context="com.app.zpvoh.imgcluster.Main2Activity"
     tools:showIn="@layout/app_bar_main2">
 
+    <fragment
+        android:id="@+id/contentFragment"
+        android:name="com.app.zpvoh.imgcluster.BlankFragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </android.support.constraint.ConstraintLayout>
