--- a/app/src/main/res/layout/fragment_my_cluster.xml
+++ b/app/src/main/res/layout/fragment_my_cluster.xml
@@ -5,9 +5,9 @@
     tools:context="com.app.zpvoh.imgcluster.MyClusterFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Cluster List is here" />
 
+    <GridView
+        android:id="@+id/myClusterViews"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </FrameLayout>
