--- a/app/src/main/res/layout/fragment_waterfall.xml
+++ b/app/src/main/res/layout/fragment_waterfall.xml
@@ -1,13 +1,40 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.app.zpvoh.imgcluster.WaterfallFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Waterall is here" />
+        android:orientation="vertical">
+
+        <GridView
+            android:id="@+id/grid"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:cacheColorHint="#00000000"
+            android:columnWidth="90dp"
+            android:drawSelectorOnTop="false"
+            android:fadeScrollbars="true"
+            android:fadingEdge="none"
+            android:fadingEdgeLength="10dp"
+            android:fastScrollEnabled="true"
+            android:gravity="center"
+            android:horizontalSpacing="10dp"
+            android:listSelector="#00000000"
+            android:numColumns="auto_fit"
+            android:scrollbars="none"
+            android:stackFromBottom="true"
+            android:stretchMode="columnWidth"
+            android:transcriptMode="alwaysScroll"
+            android:verticalSpacing="10dp"
+            tools:layout_editor_absoluteY="24dp" />
+    </LinearLayout>
 
 </FrameLayout>
